fix scrollbar layout shift

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+@-moz-document url-prefix() {
+  /* Disable scrollbar Firefox */
+  html {
+    scrollbar-width: none;
+  }
+}
